--- a/index.html
+++ b/index.html
@@ -3,39 +3,163 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Some text..." />
-    <title>web studio</title>
-    <link rel="shortcut-icon" href="./images/icon.svg" type="image/svg" />
+    <meta
+      name="description"
+      content="workspace designed to create, edit, and manage websites and web applications."
+    />
+    <title>studio</title>
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="./images/icon/web-studio-favicon.svg"
+      type="image/svg"
+    />
   </head>
   <body>
+    <!--Header-->
     <header>
       <nav>
-        <a href=""> <span>WEB</span> <span>STUDIO</span></a>
+        <a href="./index.html">WEB STUDIO</a>
         <ul>
           <li>
-            <a href=""></a>
+            <a href="#studio">Studio</a>
           </li>
           <li>
-            <a href=""></a>
+            <a href="#portfolio">Portfolio</a>
           </li>
           <li>
-            <a href=""></a>
+            <a href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
+      <address>
+        <ul>
+          <li>info@devstudio.com</li>
+          <li>+11 (000) 111-11-11</li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--hero-image-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <!--features-->
-      <section></section>
+      <section>
+        <ul>
+          <h2>Features</h2>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!--what-are-we-doing-->
-      <section></section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/we-doing/screen.jpg"
+              alt="computer screen"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/we-doing/app.jpg"
+              alt="smartphone with an open massager and four layers open on it"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/we-doing/smartphone-in-hand.jpg"
+              alt="smartphone with the open messenger in man's hand"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
       <!--our-team-->
-      <section></section>
+      <section>
+        <h2>Our Team</h2>
+        <li>
+          <img
+            src="./images/our-team/mark-guerrero.jpg"
+            alt="photo of team member Mark Guerrero"
+            width="264"
+            height="260"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img
+            src="./images/our-team/tom-ford.jpg"
+            alt="photo of team member Tom Ford"
+            width="264"
+            height="260"
+          />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="./images/our-team/camila-garcia.jpg"
+            alt="photo of team member Camila Garcia"
+            width="264"
+            height="260"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/our-team/daniel-wilson.jpg"
+            alt="photo of team member Daniel Wilson"
+            width="264"
+            height="260"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html">WEB STUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
