--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
       name="description"
       content="workspace designed to create, edit, and manage websites and web applications."
     />
-    <title>studio</title>
-    <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      href="./images/icon/web-studio-favicon.svg"
-      type="image/svg"
-    />
+    <title>WebStudio</title>
   </head>
   <body>
     <!--Header-->
