--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
       </nav>
       <address>
         <ul>
-          <li>info@devstudio.com</li>
-          <li>+11 (000) 111-11-11</li>
+          <li>
+            <a href="href=”mailto:info@devstudio.com”">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -151,7 +155,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEB STUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
