--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="workspace designed to create, edit, and manage websites and web applications."
-    />
     <title>WebStudio</title>
   </head>
   <body>
@@ -29,7 +25,7 @@
       <address>
         <ul>
           <li>
-            <a href="href=”mailto:info@devstudio.com”">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
