--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#studio">Studio</a>
